- Opening a contact that is not imported to the world will now import the actor and connect the imported actor to the character sheet
- Radio boxes now toggle when clicked and the zero buttons have been removed
- All multiboxes on scoundrel and crew sheets are dynamically generated and can be modified through active effects

v.5.3.2
- Add all rolls type upon attribute click (#23 @nic-ttrpg)
- Fix "Acquire Assets roll is programmed incorrectly" (#21)
- Fix NPC Sheets adding whitespace characters to multiple fields (#20)
- Allow Faction Type to be editable from sheet (#22)
- Enable dice roller to be accessed from the client (#24)

v.5.3.1
- Fixed Simple Roller bug when character had no crew
- Localization Update (#16 @Azaun)

v.5.3.0
- Added a "0d" indicator to dice roll chat messages
- Dice Roller inherits stress and tier from selected token (#4)
- Replaced Select helper with SelectOptions helper
- Expanded healing clock usage on character sheets
- Migrated data preparation from actor-sheet to actor for module compatibility (#14)

v.5.2.0
- Added ability for turf to changed manually by active effects (#8)
- NPC and Faction Status tokens now link to actors (#12)
- Added ability to change portrait and name of Faction Status Tracker (#12) and minor UI tweaks
- Updated NPC sheet to enable longer notes and descriptions (#11)
- Enabled linking Characters to a crew and inheriting bonuses to max trauma, stress, and action ratings
- Enabled active effects to affect action ratings on character sheet
- Added Italian Language (#9)

v.5.1.2
- Fixed Dice-So-Nice Integration for Foundry v11
- Removed false text from Dice Roller (#4, #6 @Dez384, @linxcat)
- Updated tooltips to Foundry standard
- Added color to dice in chat messages and added indicator of roll method for manual rolling
- Added Github Actions and updated the README

v.5.1.1
- Dice-So-Nice integration fix #3 (@justinross)

v.5.1.0
- Fixes for v12 Foundry #1 (@drewg13, @justinross)
- Additional v12 fixes

v.5.0.0