@@ -1,7 +1,5 @@
-2024/03/21-23:23:21.446 860 Recovering log #174
-2024/03/21-23:23:21.451 860 Delete type=0 #174
-2024/03/21-23:23:21.451 860 Delete type=3 #172
-2024/03/21-23:26:23.558 24d0 Level-0 table #179: started
-2024/03/21-23:26:23.558 24d0 Level-0 table #179: 0 bytes OK
-2024/03/21-23:26:23.559 24d0 Delete type=0 #177
-2024/03/21-23:26:23.560 24d0 Manual compaction at level-0 from '!items!678LJHqxkBAaSJci' @ 72057594037927935 : 1 .. '!items.effects!sXlemqVvMPOZJbTQ.KNiDMSa1LxOeDiv5' @ 0 : 0; will stop at (end)
+2025/01/19-14:14:57.303 13c0 Recovering log #309
+2025/01/19-14:14:57.303 13c0 Level-0 table #311: started
+2025/01/19-14:14:57.305 13c0 Level-0 table #311: 9442 bytes OK
+2025/01/19-14:14:57.309 13c0 Delete type=0 #309
+2025/01/19-14:14:57.309 13c0 Delete type=3 #308
